dispatchTouchEventで全て解決